% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
\section{CHANGES in sfsmisc VERSION 1.1-16 [2023-08-08]}{
  \subsection{Misc}{
    \itemize{
      \item \file{NEWS.Rd} work around "not yet done"-entries.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-15 [2023-04-18]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New \code{list_()} (from my pkg tools) to create auto-named
      \code{list()}s easily.

      \item improved \code{Sys.ps.cmd()} for macOS.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-14 [2022-11-09]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{read.org.table()} now determines a reasonable
      \code{nrows} automatically.
    }
  }
  \subsection{Tweaks}{
    \itemize{
      \item \code{eaxis()} has a larger default, \code{12} instead of 10,
      for \code{nintLog}.

      \item \file{man/*.Rd}: remove some extraneous \code{\\}.

      \item \file{man/helppdf.Rd}: skip example on Windows (too slow).

      \item \code{TA.plot()} now works also with NA residuals.

      \item use new internal \code{struct()} as fast substitute of
      \code{structure()}.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-13 [2022-04-02]}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{relErrV(target, current)} now keeps \code{dim()} and
      \code{dimnames()} e.g., when \code{current} is an mpfr-array and
      \code{names()} when present.
    }
  }
  \subsection{Tweaks}{
    \itemize{
      \item No longer import from \pkg{methods}: no need for a while already.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-12 [2021-09-10]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item new \code{helppdf(topic)} mostly for interactive use.
    }
  }