@@ -1,8 +1,8 @@
 Package: sfsmisc
 Title: Utilities from 'Seminar fuer Statistik' ETH Zurich
-Version: 1.1-16
-VersionNote: Last CRAN: 1.1-15 on 2023-04-18
-Date: 2023-08-08
+Version: 1.1-17
+VersionNote: Last CRAN: 1.1-16 on 2023-08-10
+Date: 2024-02-01
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch",
 	                                 comment = c(ORCID = "0000-0002-8685-9910"))
 	   , person("Werner", "Stahel", role = "ctb",
@@ -62,7 +62,7 @@ License: GPL (>= 2)
 URL: https://github.com/mmaechler/sfsmisc
 BugReports: https://github.com/mmaechler/sfsmisc/issues
 NeedsCompilation: no
-Packaged: 2023-08-08 10:31:10 UTC; maechler
+Packaged: 2024-02-01 09:34:52 UTC; maechler
 Author: Martin Maechler [aut, cre] (<https://orcid.org/0000-0002-8685-9910>),
   Werner Stahel [ctb] (Functions: compresid2way(), f.robftest(), last(),
     p.scales(), p.dnorm()),
@@ -91,4 +91,4 @@ Author: Martin Maechler [aut, cre] (<https://orcid.org/0000-0002-8685-9910>),
   Charles Geyer [ctb],
   Jens Oehlschlägel [ctb]
 Repository: CRAN
-Date/Publication: 2023-08-10 13:00:02 UTC
+Date/Publication: 2024-02-01 16:40:02 UTC
