@@ -1,4 +1,4 @@
-4d6c424bda840fbad025e792925eaf87 *DESCRIPTION
+3cd47979f7521f411cf306efd8c92830 *DESCRIPTION
 e7f43c69df8cec89887c6c0c9858967a *NAMESPACE
 8afd533b4259c17ed53c20efe8f699d7 *R/D1D2.R
 cb8954e48878fe777c0d9243716e20b5 *R/Defunct.R
@@ -6,7 +6,7 @@ cb8954e48878fe777c0d9243716e20b5 *R/Defunct.R
 2faf7fdfe633f527dea219910e888a2b *R/Duplicated.R
 da1a8bc177fa63502a2f6b553b17e9af *R/Ftest-rlm.R
 3757b9510f3471b5dfc9ba2834c8a632 *R/KS-confint.R
-e6b75135751c654dd6b318fb4fd34633 *R/TA.plot.R
+dc8b0b7f96bd8e477f0e9e3886ebf31d *R/TA.plot.R
 f89696d9cf3fea75b8935e156b5175c2 *R/diagDA.R
 91ea7964ab5ecac601bf38e69ca45ae1 *R/ellipse.R
 f05c0bbec8bd887ae30b60859f23d825 *R/glob2rx.R
@@ -16,25 +16,25 @@ f05c0bbec8bd887ae30b60859f23d825 *R/glob2rx.R
 b4a9d17e432ff9b979425f62582d49c6 *R/linesHyberb.lm.R
 a48c705692ea66ef396a718062987788 *R/loessDemo.R
 3f6a241371dbf2f94d219e795e574529 *R/mat2tex.R
-7245b337636447b5ea1a70bb8df74f18 *R/misc-goodies.R
+89ea754e91927930eac488d6be8250e5 *R/misc-goodies.R
 ad4627d9c2d46aa969ca7361abbd33c0 *R/missingCh.R
-53d3ae56bf1986a12d8b70c50c05ddb8 *R/mult.fig.R
+b91a844486c6e2c9aefa1df6546ae411 *R/mult.fig.R
 c6bd8aa46a608c7e653bf9eab228b731 *R/nearcor.R
-b64505cf75bf3dd8c4d0bd124786f39a *R/p.goodies.R
+a082597b9dc21b11fec14409d4914080 *R/p.goodies.R
 3720ed20d9d2b6c04158c17bc5bc5ee8 *R/p.res.2x.WSt.R
 d0cb50e45537e34eef3a8915f3c2df37 *R/p.res.2x.formula.R
 9afd1506d2d741d04f243e9b35706d24 *R/p.tachoPlot.R
 09bab35ec23faa9a5d18c62dccbb33d2 *R/p.ts.R
 c3dbae94f06bc46451e1367e6782e35c *R/pd-matrix.R
 d2662130063bc3f7d888b85fe00cb411 *R/pkgDesc.R
-3896be4c817d7322209858b525c44ddc *R/prettylab.R
-25b3a73be01c4e59576229386710ce47 *R/prime-numbers-fn.R
+4790ab87fa9ac8ac025a2a984b7f7744 *R/prettylab.R
+293f04c25b986f418ae3a229e9df5f90 *R/prime-numbers-fn.R
 579103392ad91392e2aea09f5d967909 *R/printTable.R
 9a4a0c362bb11bc63e203015387112ad *R/ps.goodies.R
 e331baef14f79d95bddf9f06c1579406 *R/relErr.R
 87b45273be3601faf5c40d852b08e152 *R/rot13.R
 11a6ed2caf724846b43282bef7b56c10 *R/rrange.R
-f3e3cb1b0a59147e8ac8920873d7351f *R/sessionInfo-ext.R
+f24d2b989d01c5933955827cd201ed34 *R/sessionInfo-ext.R
 fc45293bdb8acc5c249e9f533e84181a *R/sourceAttach.R
 9157d8065f07a8a3c048553cbe1cb5e0 *R/str_data.R
 8a24f77bf447231bbd8c436a40dc14ef *R/tkdensity.R
@@ -45,16 +45,16 @@ b2ada1549f4d55d8a786835c3ab9eea9 *R/unix/package-props.R
 f4ca3082066937640729753f359c131b *R/zzz.R
 5aa594d45d25b7e7ef9f145a8072cff0 *README.md
 921f6ec32680a6aaf9fc95815f1c58bb *TODO
-7080893e02c49cd296d4424b9be55069 *build/partial.rdb
+8faf250d78a120ba4c7ea2186efddd24 *build/partial.rdb
 24c4be0aa52face72313592ef90cf899 *data/potatoes.rda
 3162005b7c7bcef9a60f61223ee381aa *demo/00Index
 f9218ba6ed399a453f42f7104605783b *demo/hatmat-ex.R
 c90bddd957b7fd59ad0ec2fbc069ed5b *demo/pretty-lab.R
 1cfe5644e4ebaf2f16906018b6a9be8d *demo/prime-numbers.R
 4d314a8c0c266297365a8fa808c12e30 *inst/ChangeLog
-b3bd97ff0ceaf34d50442363ed688b6b *inst/NEWS.Rd
+b65e2a0061eae6acded2209d79d6a1eb *inst/NEWS.Rd
 ffa570d5bdc9cfa5c272c7c7e801d0b7 *man/AsciiToInt.Rd
-9cabb0a929659d2fd8bd6fe39116e8af *man/D1D2.Rd
+ac9813aa0a938636da9b6a6e3904332f *man/D1D2.Rd
 4778c6d3e74920fc8f277e79f5092bc1 *man/D2ss.Rd
 6539612fd8fbe186385ae3d303e525d1 *man/Deprecated.Rd
 d16dad87f8c00165d842345b7573df7e *man/Duplicated.Rd
